# meta_kg

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT_SUMMARY.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  HSA_SUMMARY.md  README.md  WORKFLOW.md  analysis.md  commit.txt  meta_kg_analysis_20260228.md  meta_kg_analysis_20260303.md  meta_kg_analysis_20260304.md  meta_kg_analysis_20260306.md  metakg-analysis-2026-03-03-192921.md  pyproject.toml  release-notes.md  settings.local.json
.claude/skills/metakg-thorough-analysis/: SKILL.md
.codekg/: graph.sqlite
.codekg/lancedb/codekg_nodes.lance/_transactions/: 0-20fbcb35-0eb5-4739-a647-001180b6f26e.txn  0-949c779b-6e41-4baa-8bae-d3f6dfd346d8.txn  0-c0aab754-29e4-43e3-94f1-ec9ed7417bfb.txn  1-200a2b42-0e78-427a-b98a-b15dd2d45290.txn  1-7a5f3934-e2ea-49c1-9c51-0b9451af2c1a.txn  1-86484b88-f509-4f2e-b211-aa810e312b0a.txn  2-26396388-4c5b-43ef-9c26-fc639f0ab091.txn  2-3939c9f1-9abb-4f2e-9c18-92a95411b304.txn  2-ea0dea1a-c834-41cf-8898-4e307d6a7d96.txn  3-20a44796-12c1-424f-b201-89c8e7cd0cc9.txn  3-28af7e8e-1af2-40c3-9eb2-c23f79625d64.txn  3-d40a8d50-bc7d-4c94-b6df-8ad19342db75.txn  4-05e59e4f-90c8-4507-851b-110438463f8a.txn  4-18f6e30a-9791-4f7b-b190-3d90e3877b92.txn  4-7b1621c9-117e-49fd-a597-7875eef180a0.txn  5-7930454b-9586-419b-a26d-a50328e8f8aa.txn  5-9977e2d8-2395-4bf1-8e27-2a7787732150.txn  5-aa911b14-9a36-4aa0-b3e2-5995b3e3df22.txn
article/: metakg.bbl  metakg.blg  metakg.tex  metakg_architecture_infographic.md  metakg_article.md  metakg_article.tex  metakg_revised.tex  references.bib
docs/: CAPABILITIES.md  CHANGELOG.md  INSTALL.md
pathways/: hsa00010.xml  hsa00020.xml  hsa00030.xml  hsa00071.xml  hsa00190.xml  hsa00230.xml  hsa00250.xml  hsa00260.xml  hsa00480.xml  hsa00620.xml  hsa00650.xml
scripts/: article_examples.py  collect_pathway_data.py  download_human_kegg.py  simulation_demo.py  wire_enzymes.py  wire_kegg_enzymes.py
src/metakg/: __init__.py  analyze.py  app.py  cli.py  embed.py  enrich.py  graph.py  index.py  kinetics_fetch.py  layout3d.py  mcp_tools.py  metakg_viz3d.py  orchestrator.py  primitives.py  simulate.py  store.py  thorough_analysis.py  viz3d.py
src/metakg/cli/: __init__.py  cmd_build.py  cmd_viz3d.py  options.py
src/metakg/parsers/: __init__.py  base.py  biopax.py  csv_tsv.py  kgml.py  sbml.py
tests/: test_orchestrator.py  test_parsers.py  test_primitives.py  test_simulation.py  test_store.py
