[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metakg"
version = "0.1.0"
description = "Metabolic pathway parser and semantic knowledge graph with MCP support"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
keywords = ["metabolic-pathways", "knowledge-graph", "bioinformatics", "semantic-search", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "metakg", from = "src" }]

[tool.poetry.dependencies]
python     = ">=3.10,<3.13"
lancedb    = ">=0.29.0"
numpy      = ">=1.24.0"
sentence-transformers = ">=2.7.0"

[tool.poetry.dependencies.rdflib]
version  = ">=6.0.0"
optional = true

[tool.poetry.dependencies.mcp]
version  = ">=1.0.0"
optional = true

[tool.poetry.dependencies.streamlit]
version  = ">=1.35.0"
optional = true

[tool.poetry.dependencies.pyvis]
version  = ">=0.3.2"
optional = true

[tool.poetry.dependencies.pyvista]
version  = ">=0.44.0"
optional = true

[tool.poetry.dependencies.pyvistaqt]
version  = ">=0.11.0"
optional = true

[tool.poetry.dependencies.PyQt5]
version  = ">=5.15.0"
optional = true

[tool.poetry.dependencies.param]
version  = ">=2.0.0"
optional = true

[tool.poetry.extras]
biopax = ["rdflib"]
mcp    = ["mcp"]
viz    = ["streamlit", "pyvis"]
viz3d  = ["pyvista", "pyvistaqt", "PyQt5", "param"]
all    = ["rdflib", "mcp", "streamlit", "pyvis", "pyvista", "pyvistaqt", "PyQt5", "param"]

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff       = ">=0.4.0"
mypy       = ">=1.10.0"

[tool.poetry.scripts]
metakg-build   = "metakg.cli:build_main"
metakg-mcp     = "metakg.cli:mcp_main"
metakg-viz     = "metakg.cli:viz_main"
metakg-viz3d   = "metakg.cli:viz3d_main"
metakg-analyze = "metakg.cli:analyze_main"

codekg-build-sqlite  = "code_kg.build_codekg_sqlite:main"
codekg-build-lancedb = "code_kg.build_codekg_lancedb:main"
codekg-query         = "code_kg.codekg_query:main"
codekg-pack          = "code_kg.codekg_snippet_packer:main"
codekg-viz           = "code_kg.codekg_viz:main"
codekg-mcp           = "code_kg.mcp_server:main"
codekg-analyze       = "code_kg.codekg_thorough_analysis:cli"
codekg-viz3d         = "code_kg.codekg_viz3d:main"


[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.10"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
